--- a/P007892.opf/layers/v001/Pagination.yml
+++ b/P007892.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 87c539cd69774c8db8b43f46814be2a4
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   dacabf02a29a4f0cbac97a004e53add7:
