--- a/P007892.opf/layers/v002/Pagination.yml
+++ b/P007892.opf/layers/v002/Pagination.yml
@@ -1,5 +1,5 @@
 id: f4ac9a9429734c0daf600afb17bf7ead
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   de15aba7f50d4b29a5f5783e6028dc09:
