--- a/P007892.opf/meta.yml
+++ b/P007892.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P007892
 initial_creation_type: ocr
+created_at: 22/03/2020
+last_modified_at: 25/11/2021
 source_metadata:
   id: bdr:W20503
   title: གསུང་འབུམ། མཁྱེན་རབ་བསྟན་པ་ཆོས་འཕེལ།
@@ -17,10 +19,3 @@ source_metadata:
       volume_number: 2
       total_pages: 616
       base_file: v002.txt
-ebook_metadata:
-  title: གསུང་འབུམ། མཁྱེན་རབ་བསྟན་པ་ཆོས་འཕེལ།
-  author: ''
-  sku: P007892
-  cover: cover.jpg
-  layers:
-  - pagination
